src/styles/_skills.scss
#SR {
  display: grid;
  grid-template-columns: minmax(2rem, 6rem) 1fr minmax(2rem, 6rem);

  min-height: 110vh;
  height: min-content;

  background-color: $color-black;

  @media only screen and (max-width: $screen-small) {
    grid-template-columns: 2rem 1fr 2rem;
  }

  .SRWrapper {
    grid-column: 2 / 3;
    margin-top: 8rem;


    .skills {
      display: grid;

      &__title {
        justify-self: center;
        //font-weight: bold;
        font-size: 2.3rem;
        line-height: 2.01rem;
        color: $color-magenta;
        letter-spacing: 0.1rem;

        //border-bottom: magenta 1px solid;

        margin-bottom: 2rem;
      }

      &__eachSkills {
        display: flex;
        justify-content: space-around;
        flex-wrap: wrap;
        .sBox {
          text-align: center;
          margin: 0 1rem 1rem 1rem;

          .arrow { color: $color-magenta; }

          .top {
            color: $color-white;
            font-size: 2rem;
            font-weight: bold;
            letter-spacing: 0.03rem;
          }

          .under {
            color: #6b6b6b;
            font-weight: normal;
            font-size: 1.3rem;
            margin-top: -0.5rem;
          }
        }
      }

      &__desc {
        color: #d8d8d8;
        font-size: 1.4rem;
        letter-spacing: 0.1rem;
        text-align: center;
        margin-top: 5rem;
        margin-bottom: 11rem;
        word-break: break-all;
      }
    }

    .resume {
      display: grid;
      grid-template-columns: 1rem 1rem 1fr;
      margin-left: 15vw;

      @media only screen and (max-width: 1100px) { margin-left: 10vw; }
      @media only screen and (max-width: 950px) { margin-left: 0; }

      > p.title {
        grid-column: 1 / 4;
        justify-self: center;
        font-size: 2.3rem;
        line-height: 2.01rem;
        color: $color-magenta;
        letter-spacing: 0.1rem;
        margin-bottom: 7rem;
        margin-left: calc(-2rem - 15vw);
        @media only screen and (max-width: 1100px) { margin-left: calc(-2rem - 10vw); }
        @media only screen and (max-width: 950px) { margin-left: -2rem; }
      }

      .verticalLine {
        grid-row: 2 / 9;
        height: 100%;
        border-right: whitesmoke 3px solid;
        margin-right: -7px;
      }

      .circle {
        height: 11px;
        width: 11px;
        border-radius: 50%;
        background-color: whitesmoke;
        margin-top: 2.2rem;
      }

      .eachInfo {
        margin-bottom: 4rem;
        margin-left: 2rem;

        .date {
          font-size: 1.3rem;
          color: white;
          letter-spacing: 0.05rem;

          margin-bottom: -0.5rem;

          .current { color: $color-magenta; }
        }

        .company {
          font-size: 1.7rem;
          color: white;
          font-weight: 600;
          letter-spacing: 0.06rem;
          margin-bottom: 0.4rem;
        }

        .progress {
          color: whitesmoke;
          font-size: 1.5rem;
          letter-spacing: 0.04rem;

          margin-left: 1rem;
          line-height: 2rem;
        }

        .acquireSkills {
          color: gray;
          text-decoration-line: underline;
          font-size: 1.2rem;
          margin-left: 1rem;
          margin-top: 1.8rem;

          display: flex;
          list-style: none;
          > li { margin-right: 1rem; }
        }
      }
    }
  }
}

